--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+# Dependencies
 node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+.next/
+dist/
+out/
+build/
+
+# Temp files
+.env
+.cache/
+.temp/
+.DS_Store
